--- a/package.json
+++ b/package.json
@@ -5,21 +5,15 @@
   "main": "public/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack & node server",
-    "start": "node server",
-    "build": "webpack"
+    "build": "webpack -w"
   },
   "author": "Ahmed Haque",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.12.0",
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "mongoose": "^4.5.1",
-    "morgan": "^1.7.0",
+    "axios": "^0.16.2",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^4.1.2"
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
